# origin

Alg/ConsoleApplication1/: ConsoleApplication1.sln
DinMas/ConsoleApplication1/: ConsoleApplication1.sln
DinMas/ConsoleApplication2/: ConsoleApplication2.sln
Lesson_CMake/Task1/: my_first_cmake_program.cpp
My_Prog/: CHP1.chm  Rukovodstvo_administratora.chm  Rukovodstvo_polzovatelya.chm  Rukovodstvo_polzovatelya_manual.doc  igra.html
My_Prog/Слова/: Lib.RUS  Thumbs.db
Piramida/ConsoleApplication1/: ConsoleApplication1.sln
Piramida/ConsoleApplication2/: ConsoleApplication2.sln
PostgreSQL_1/: CMakeLists.txt  clients_sql.cpp  clients_sql.h  main.cpp
Sort/ConsoleApplication1/: ConsoleApplication1.sln
Sort/ConsoleApplication2/: ConsoleApplication2.sln
Sort/ConsoleApplication3/: ConsoleApplication3.sln
Templates1/hw1_1/: hw1_1.sln
Templates1/hw1_2/: hw1_2.sln
Templates1/hw2_1/: hw2_1.sln
Templates1/hw2_2/: hw2_2.sln
Templates1/hw3_1/: hw3_1.sln
Templates1/hw3_2/: hw3_2.sln
Templates1/hw3_3/: hw3_3.sln
Test1/: README.md  Руководство_пользователя_Системы_навигации.docx  РуководствопоэксплуатацииСистемынавигацииавтономногоробота.md
UmUkazat/ConsoleApplication1/: ConsoleApplication1.sln
UmUkazat/ConsoleApplication2/: ConsoleApplication2.sln
multithreading/hw1/: hw1.sln
multithreading/hw2/: hw2.sln
multithreading/hw4_/: hw4_.sln
multithreading/hw_2_1/: hw_2_1.sln
multithreading/hw_2_2/: hw_2_2.sln
multithreading/hw_2_3/: hw_2_3.sln
multithreading/hw_3_1_/: hw_3_1_.sln
multithreading/hw_3_2_/: hw_3_2_.sln
test/Task_2/: main.cpp
(+304 files in other folders)
